Fix datatype issue
